--- a/_data/index/schedule.yml
+++ b/_data/index/schedule.yml
@@ -28,7 +28,7 @@
 - name:
     detail: Workshop
   desc:
-    detail: Held with ECCV’22
+    detail: Held with ECCV’24
   date:
-      detail: Oct. 24th from 9am-1pm (GMT+3)
+      detail: TBD #Oct. 24th from 9am-1pm (GMT+3)
   icon: fa-calendar
