--- a/_data/index/organizer.yml
+++ b/_data/index/organizer.yml
@@ -1,19 +1,19 @@
 # links section data
 - last_name: Andre
   first_name: Araujo
-  desc: Google Research (Primary Contact)
+  desc: Google DeepMind (Primary Contact)
   website: https://andrefaraujo.github.io
   email: andrearaujo@google.com
 
 - last_name: Bingyi 
   first_name: Cao
-  desc: Google Research
+  desc: Google DeepMind
   website: 
   email: bingyi@google.com
 
 - last_name: Kaifeng
   first_name: Chen
-  desc: Google Research
+  desc: Google DeepMind
   website: https://scholar.google.com/citations?user=xjEcoNQAAAAJ&hl=en
   email: francischen@google.com
 
