--- a/_data/index/speaker.yml
+++ b/_data/index/speaker.yml
@@ -7,7 +7,7 @@
   url: https://scholar.google.com/citations?user=IvqCXP4AAAAJ&hl=en
   i18n: Cordelia Schmid
   img: /static/assets/img/landing/cordelia.jpg
-  desc: Inria Research Director
+  desc: Research Director at INRIA and Google DeepMind
   title: 
   abstract: 
   bio: 
