--- a/_data/landing.yml
+++ b/_data/landing.yml
@@ -6,9 +6,9 @@
   tpl: about.html
   css:
 
-- id: Call For Paper
+- id: Call For Papers
   i18n: nav.challenge
-  name: Call For Paper
+  name: Call For Papers
   tpl: call_for_paper.html
   css: 
 
