--- a/_data/landing.yml
+++ b/_data/landing.yml
@@ -18,11 +18,11 @@
 #   tpl: timetable.html
 #   css: timeline
 
-# - id: Schedule
-#   i18n: nav.schedule
-#   name: schedule
-#   tpl: schedule.html
-#   css: timeline
+- id: Schedule
+  i18n: nav.schedule
+  name: schedule
+  tpl: schedule.html
+  css: timeline
 
 - id: Speaker 
   i18n: nav.speaker
