--- a/_data/index/timetable.yml
+++ b/_data/index/timetable.yml
@@ -42,7 +42,7 @@
     host: 
   date:
     detail: Sep. 30th, 10:05am-11:05am (UTC+2/CEST)
-  icon: fa-microphone 
+  icon:
 
 - name:
     detail: Keynote 2 
