--- a/_data/index/timetable.yml
+++ b/_data/index/timetable.yml
@@ -85,5 +85,5 @@
     slides: 
     host:
   date:
-    detail: Sep. 30th, 12:35am-12:40pm (UTC+2/CEST) 
+    detail: Sep. 30th, 12:35pm-12:40pm (UTC+2/CEST) 
   icon: fa-microphone 
