--- a/_data/index/timetable.yml
+++ b/_data/index/timetable.yml
@@ -74,7 +74,7 @@
     slides: 
     host: 
   date:
-    detail: Sep. 30th, 12:05am-12:35pm (UTC+2/CEST)
+    detail: Sep. 30th, 12:05pm-12:35pm (UTC+2/CEST)
   icon: fa-microphone 
 
 - name:
