--- a/_data/index/timetable.yml
+++ b/_data/index/timetable.yml
@@ -25,7 +25,7 @@
 - name:
     detail: Oral session
   desc:
-    detail: Segment, Select, Correct: A Framework for Weakly-Supervised Referring Segmentation
+    detail: Segment, Select, Correct- A Framework for Weakly-Supervised Referring Segmentation
     detail1: Leveraging Object Priors for Point Tracking
     video: 
     slides: 
