--- a/_data/landing.yml
+++ b/_data/landing.yml
@@ -30,6 +30,12 @@
   tpl: speaker.html
   css: speaker
 
+- id: Invited_Papers
+  i18n: nav.challenge
+  name: Invited Papers
+  tpl: invited_papers.html
+  css: 
+
 - id: Accepted_Papers
   i18n: nav.challenge
   name: Accepted Papers
