--- a/_data/index/timetable.yml
+++ b/_data/index/timetable.yml
@@ -14,6 +14,7 @@
 - name: 
     detail: Keynote 1
   desc:
+    title: Fine-grained image classification based on retrieval and data generation
     detail: Cordelia Schmid
     video: 
     slides: 
