--- a/_data/index/timetable.yml
+++ b/_data/index/timetable.yml
@@ -58,9 +58,11 @@
   icon: fa-microphone 
 
 - name:
-    detail: Invited papers
+    detail: Oral Session - Invited papers
   desc:
-    detail: 
+    detail: Grounding Language Models for Visual Entity Recognition
+    detail1: PetFace: A Large-Scale Dataset and Benchmark for Animal Identification
+    detail2: MeshVPR: Citywide Visual Place Recognition Using 3D Meshes
     video: 
     slides: 
     host:
